#102 Fix dialog and toast overlap

--- a/front-end/app/styles/_base.scss
+++ b/front-end/app/styles/_base.scss
@@ -99,10 +99,6 @@ md-datepicker {
   margin-top: 60px;
 }
 
-body.md-toast-animating {
-  overflow: auto !important;
-}
-
 .max-width-100 {
   max-width: 100%;
   width: 100%;
